[package]
name = "wskdf-cli"
version = "0.1.0"
edition = "2024"


[dependencies]
anyhow = { workspace = true }
rand = { workspace = true }
wskdf-core = { path = "../wskdf-core" }
clap = { version = "4", features = ["derive"] }
hex = { workspace = true }
rayon = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
